app/service.yml
apiVersion: v1
kind: Service
metadata:
    name: leaderboard
spec:
    type: LoadBalancer
    ports:
    - targetPort: 8080
      port: 8080
    selector:
        app: leaderboard
---
apiVersion: v1
kind: Service
metadata:
    name: web
spec:
    type: LoadBalancer
    ports:
    - port: 8080
    selector:
        app: web
