app/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: web
  name: web
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
